# store

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/apps/: routers.py
src/apps/orders/: admin.py  models.py  serializers.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
src/apps/products/: admin.py  models.py  serializers.py  views.py
src/apps/products/migrations/: 0001_initial.py  0002_initial.py
src/apps/products/tests/categories/: test_api.py
src/apps/products/tests/products/: test_api.py
src/apps/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/profiles/migrations/: 0001_initial.py
src/apps/reviews/: admin.py  models.py
src/apps/reviews/migrations/: 0001_initial.py
src/apps/shops/: admin.py  models.py  serializers.py  views.py
src/apps/shops/migrations/: 0001_initial.py
src/apps/shops/tests/: test_api.py
src/apps/store/: admin.py  apps.py  models.py  signals.py  views.py
src/apps/store/migrations/: 0001_initial.py  0002_remove_product_categories_product_categories.py  0003_alter_product_categories.py
src/base/: permissions.py
src/config/: settings.py  urls.py
src/core/: middleware.py
src/tests/: base_test.py
